# NetDevOps

./: .gitignore  Network Engineer Modules.MD  README.md  Scrum learnings.MD  pyproject.toml
Automation/: Automation Journey.md  My Automation Journey.md
Cisco DevNet Associate exam/: Exam Details.MD  devasc_studyplan.xlsx
Cisco DevNet Associate exam/Notes/: 00 - Need to Learn more.MD  API.MD  Application Security.MD  CICD Pipeline.MD  Cisco API.MD  Deploying Applications - Docker.MD  Deploying Applications.MD  DevOps.MD  Linux.MD  Model-Driven Programmability.MD  Network Programmability.MD  Python Basics.MD  Python data formats.MD  Python intermediate.MD  Python.MD  Software Development Practices.MD  Software Testing.MD  Tips for VSCode.MD  Version Control and Git.MD
Cisco DevNet Associate exam/Sample Code/: logging_runbook1.py  observer.py  personClass.py  quick_restapi_call.py  singleton.py
Databases/: alchemy_device_interface.py  device_interface.py  sqlite_device_interface.py
Django/: Django Structure.md  Django quick commands.md  Django training.MD
Quick How-to-X/: Quick API call.md  Quick Python Class Object.md  Threading.md  argparse_basic.py  click_basic.py  threading_example.py  typer_basic.py  using_logger.py
Quick How-to-X/class building/: network_device.py  network_device_composition.py
Quick How-to-X/logger_folder/: logger_class.py
Random training/: regex training.MD
Testing/pyATS/: Training notes.MD  (+6 more)
images xml/: Model View Controller.drawio  Observer Pattern.drawio  Singleton design.drawio  Singleton design.xml  Untitled Diagram.drawio
(+15 files in other folders)
